--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   google_sign_in: ^6.1.5
   random_string: ^2.3.1
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
